Added support for Enum and HasSets to JSON serializer